--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Batata Bit</title>
-
 </head>
 <body>
-    <header></header>
+    <header class="header">
+        <img src="/assets/images/batata_logo.svg" alt="Batata-bit logo">
+        <section class="header__title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="#" class="header__button">Conoce Nuestros Planes <span>i</span></a>
+        </section>
+    </header>
     <main>
         <section></section>
         <section></section>
