--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
         </section>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <figure class="backgroundImg"></figure>
+            <div class="main-exchange-container--title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <div></div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
