Grid implementation for exchange table. To be fixed.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
             <section class="main-tables-container">
-                <div></div>
+                    <p class="bitcoin">Bitcoin<span></span></p>
+                    <p class="ethereum">Ethereum<span></span></p>
+                    <p class="ripple">Ripple<span></span></p>
+                    <p class="stellar">Stellar<span></span></p>
+                    <p class="bnum">$1.96<span></span></p>
+                    <p class="ethnum">$0.07<span></span></p>
+                    <p class="ripnum">$2.15<span></span></p>
+                    <p class="stenum">$4.96<span></span></p>
             </section>
+            <div class="main-tables-container--update">
+                <p><span>Actualizado:</span> 19 Julio 23:45</p>
+            </div>
         </section>
         <section></section>
         <section></section>
