--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
             <section class="main-tables-container">
-                    <p class="bitcoin">Bitcoin<span></span></p>
-                    <p class="ethereum">Ethereum<span></span></p>
-                    <p class="ripple">Ripple<span></span></p>
-                    <p class="stellar">Stellar<span></span></p>
+                    <h5>Monedas</h5>
+                    <p class="bitcoin">Bitcoin</p>
+                    <p class="ethereum">Ethereum</p>
+                    <p class="ripple">Ripple</p>
+                    <p class="stellar">Stellar</p>
                     <p class="bnum">$1.96<span></span></p>
                     <p class="ethnum">$0.07<span></span></p>
                     <p class="ripnum">$2.15<span></span></p>
