--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p class="stenum">$4.96<span></span></p>
             </section>
             <div class="main-tables-container--update">
-                <p><span>Actualizado:</span> 19 Julio 23:45</p>
+                <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
             </div>
         </section>
         <section></section>
