--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2>Visibilizamos todas las tasas de cambio.</h2>
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
+<!-- EXCHANGE AND COMISSIONS TABLES -->
             <section class="main-tables-container">
                     <h5>Monedas</h5>
                     <p class="bitcoin">Bitcoin</p>
@@ -39,6 +40,24 @@
             <div class="main-tables-container--update">
                 <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
             </div>
+            <section class="main-tables-comissions">
+                <div class="main-tables-comissions--title">
+                    <h5>Comisiones</h5>
+                </div>
+                <div class="main-tables-comissions--table">
+                    <p class="bitrade index">Bitrade</p>
+                    <p class="bitrnum amnt">$1.96</p>
+                    <p class="bitpreco index">Bitpreco</p>
+                    <p class="bitpnum amnt">$0.07</p>
+                    <p class="novadax index">Novadax</p>
+                    <p class="nvxnum amnt">$2.15</p>
+                    <p class="coinext index">Coinext</p>
+                    <p class="coinum amnt">$4.96</p>
+                </div>
+        </section>
+        <div class="main-tables-comissions--update">
+            <p><strong>Actualizado:</strong> 19 Julio 23:48</p>
+        </div>
         </section>
         <section></section>
         <section></section>
