--- a/index.html
+++ b/index.html
@@ -59,7 +59,21 @@
             <p><strong>Actualizado:</strong> 19 Julio 23:48</p>
         </div>
         </section>
-        <section></section>
+<!----------- BENEFITS SECTION ----------------->
+        <section class="main-product-detail">
+            <span class="batatabit-isotype"></span>
+            <div class="main-product-detail__title">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="product-cards">
+                <article class="product-cards__card">
+                    <span class="product-cards__card--clock"></span>
+                    <p class="product-cards__card--title">Tiempo real</p>
+                    <p class="product-cards__card--content">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
