--- a/index.html
+++ b/index.html
@@ -68,9 +68,24 @@
             </div>
             <section class="product-cards">
                 <article class="product-cards__card">
-                    <span class="product-cards__card--clock"></span>
+                    <span class="product-cards__card--icon clock"></span>
                     <p class="product-cards__card--title">Tiempo real</p>
                     <p class="product-cards__card--content">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+                <article class="product-cards__card">
+                    <span class="product-cards__card--icon eye"></span>
+                    <p class="product-cards__card--title">No hay tasas escondidas</p>
+                    <p class="product-cards__card--content">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product-cards__card">
+                    <span class="product-cards__card--icon dollar"></span>
+                    <p class="product-cards__card--title">Compara monedas</p>
+                    <p class="product-cards__card--content">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product-cards__card">
+                    <span class="product-cards__card--icon  check"></span>
+                    <p class="product-cards__card--title">Información confiable</p>
+                    <p class="product-cards__card--content">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
                 </article>
             </section>
         </section>
