Added the wildcard section. Restablished distance between last section and this one.

--- a/index.html
+++ b/index.html
@@ -82,14 +82,17 @@
                     <p class="product-cards__card--title">Compara monedas</p>
                     <p class="product-cards__card--content">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
                 </article>
-                <article class="product-cards__card">
+                <article class="product-cards__card last">
                     <span class="product-cards__card--icon  check"></span>
                     <p class="product-cards__card--title">Información confiable</p>
                     <p class="product-cards__card--content">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
                 </article>
             </section>
         </section>
-        <section></section>
+<!-------------------- BICOTIN BABY ------------------------>
+        <section class="bitcoin-img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
         <section></section>
     </main>
     <footer></footer>
