--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="header__title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="#" class="header__button">Conoce Nuestros Planes <span></span></a>
+            <a href="#plans" class="header__button">Conoce Nuestros Planes <span></span></a>
         </section>
     </header>
     <main>
@@ -93,9 +93,25 @@
         <section class="bitcoin-img-container">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section></section>
+<!-------------------- PLAN SECTION ----------------------->
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma</p>
+            </div>
+            <section class="plans-container--slider">
+                <article  class="plans-container--card">
+                    <p>Recomendado</p>
+                    <div>
+                        <h3>Pago Anual</h3>
+                        <p><span>$</span>99</p>
+                        <p>*Ahorras $129 comparado al plan mnesual</p>
+                    </div>
+                    <button>Escoger este <span></span></button>
+                </article>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
 </html>
-<!-------------------- PLAN SECTION ----------------------->
