--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             </div>
             <section class="plans-container--slider">
                 <article  class="plans-container--card">
-                    <p class="recomendado">Recomendado</p>
+                    <p class="recommended">Recomendado</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card__title">Pago Anual</h3>
                         <p class="plan-card__price"><span>$</span>99</p>
-                        <p class="plan-card__saving">*Ahorras $129 comparado al plan mnesual</p>
+                        <p class="plan-card__saving">*Ahorras $129 comparado al plan mnesual.</p>
                     </div>
-                    <button>Escoger este <span></span></button>
+                    <button class="plan-card__call-to-action">Escoger este <span></span></button>
                 </article>
             </section>
         </section>
