This section is now complete. Added horizontal scroll to the cards as well.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
                     </div>
                     <button class="plan-card__call-to-action">Escoger este <span></span></button>
                 </article>
+                <article  class="plans-container--card">
+                    <p class="recommended">Básico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card__title">Pago Anual</h3>
+                        <p class="plan-card__price"><span>$</span>49</p>
+                        <p class="plan-card__saving">*Ahorras $129 comparado al plan mnesual.</p>
+                    </div>
+                    <button class="plan-card__call-to-action basic-button">Escoger este <span></span></button>
+                </article>
+                <article  class="plans-container--card">
+                    <p class="recommended">Premium</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card__title">Pago Anual</h3>
+                        <p class="plan-card__price"><span>$</span>159</p>
+                        <p class="plan-card__saving">*Ahorras $129 comparado al plan mnesual.</p>
+                    </div>
+                    <button class="plan-card__call-to-action">Escoger este <span></span></button>
+                </article>
             </section>
         </section>
     </main>
