--- a/index.html
+++ b/index.html
@@ -20,44 +20,50 @@
     </header>
     <main>
         <section class="main-exchange-container">
-            <figure class="backgroundImg"></figure>
-            <div class="main-exchange-container--title">
-                <h2>Visibilizamos todas las tasas de cambio.</h2>
-                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
-            </div>
-<!-- EXCHANGE AND COMISSIONS TABLES -->
-            <section class="main-tables-container">
-                    <h5>Monedas</h5>
-                    <p class="bitcoin">Bitcoin</p>
-                    <p class="ethereum">Ethereum</p>
-                    <p class="ripple">Ripple</p>
-                    <p class="stellar">Stellar</p>
-                    <p class="bnum">$1.96<span></span></p>
-                    <p class="ethnum">$0.07<span></span></p>
-                    <p class="ripnum">$2.15<span></span></p>
-                    <p class="stenum">$4.96<span></span></p>
+                <figure class="backgroundImg"></figure>
+                <div class="main-exchange-container--title">
+                    <h2>Visibilizamos todas las tasas de cambio.</h2>
+                    <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+                </div>
+    <!-- EXCHANGE AND COMISSIONS TABLES -->
+            <section class="tables">
+                <div class="tables__currency">
+                    <section class="main-tables-container">
+                            <h5>Monedas</h5>
+                            <p class="bitcoin">Bitcoin</p>
+                            <p class="ethereum">Ethereum</p>
+                            <p class="ripple">Ripple</p>
+                            <p class="stellar">Stellar</p>
+                            <p class="bnum">$1.96<span></span></p>
+                            <p class="ethnum">$0.07<span></span></p>
+                            <p class="ripnum">$2.15<span></span></p>
+                            <p class="stenum">$4.96<span></span></p>
+                    </section>
+                    <div class="main-tables-container--update">
+                        <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
+                    </div>
+                </div>
+                <div class="tables__comissions">
+                    <section class="main-tables-comissions">
+                        <div class="main-tables-comissions--title">
+                            <h5>Comisiones</h5>
+                        </div>
+                        <div class="main-tables-comissions--table">
+                            <p class="bitrade index">Bitrade</p>
+                            <p class="bitrnum amnt">$1.96</p>
+                            <p class="bitpreco index">Bitpreco</p>
+                            <p class="bitpnum amnt">$0.07</p>
+                            <p class="novadax index">Novadax</p>
+                            <p class="nvxnum amnt">$2.15</p>
+                            <p class="coinext index">Coinext</p>
+                            <p class="coinum amnt">$4.96</p>
+                        </div>
+                    </section>
+                <div class="main-tables-comissions--update">
+                    <p><strong>Actualizado:</strong> 19 Julio 23:48</p>
+                </div>
+                </div>
             </section>
-            <div class="main-tables-container--update">
-                <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
-            </div>
-            <section class="main-tables-comissions">
-                <div class="main-tables-comissions--title">
-                    <h5>Comisiones</h5>
-                </div>
-                <div class="main-tables-comissions--table">
-                    <p class="bitrade index">Bitrade</p>
-                    <p class="bitrnum amnt">$1.96</p>
-                    <p class="bitpreco index">Bitpreco</p>
-                    <p class="bitpnum amnt">$0.07</p>
-                    <p class="novadax index">Novadax</p>
-                    <p class="nvxnum amnt">$2.15</p>
-                    <p class="coinext index">Coinext</p>
-                    <p class="coinum amnt">$4.96</p>
-                </div>
-        </section>
-        <div class="main-tables-comissions--update">
-            <p><strong>Actualizado:</strong> 19 Julio 23:48</p>
-        </div>
         </section>
 <!----------- BENEFITS SECTION ----------------->
         <section class="main-product-detail">
