Added media query for 930px

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/tablet.css" media="(min-width: 930px)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Batata Bit</title>
@@ -83,7 +84,7 @@
                     <p class="product-cards__card--title">No hay tasas escondidas</p>
                     <p class="product-cards__card--content">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
                 </article>
-                <article class="product-cards__card">
+                <article class="product-cards__card compare">
                     <span class="product-cards__card--icon dollar"></span>
                     <p class="product-cards__card--title">Compara monedas</p>
                     <p class="product-cards__card--content">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
@@ -128,7 +129,7 @@
                     <p class="recommended">Premium</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card__title">Pago Anual</h3>
-                        <p class="plan-card__price"><span>$</span>159</p>
+                        <p class="plan-card__price"><span id="plan-card__price--dolar">$</span>159</p>
                         <p class="plan-card__saving">*Ahorras $129 comparado al plan mnesual.</p>
                     </div>
                     <button class="plan-card__call-to-action">Escoger este <span></span></button>
